feat: genie-cli-teams — provider-selectable orchestration
Implements wish genie-cli-teams with 6 execution groups:
- Group A: CLI surface + contract validation
- Group B: Team model + blueprint defaults
- Group C: Provider adapters (claude/codex)
- Group D: Tmux runtime + mosaic layout
- Group E: Mailbox + protocol router
- Group F: Integration + genie-pilot skill

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "build:plugin": "node scripts/build.js",
     "sync": "node scripts/sync.js",
     "build-and-sync": "npm run build:plugin && npm run sync",
-    "prepack": "bun run build"
+    "prepack": "bun run build",
+    "test": "bun test",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@inquirer/prompts": "^7.0.0",
