--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ node_modules/
 dist/
 build/
 *.js.map
+*.tsbuildinfo
 
 # Plugin package.json (generated)
 plugin/package.json
@@ -46,6 +47,14 @@ yarn-error.log*
 
 # Worker registry (contains session IDs)
 .genie/workers.json
+
+# Team runtime state
+.genie/mailbox/
+.genie/tasks.json
+.genie/state.json
+
+# Lock files
+bun.lock
 
 # bd worktree (legacy)
 genie-cli-e6q/
