refactor: rename plugin from automagik-genie to genie
- Move openclaw.plugin.json to package root so `openclaw plugins install`
  works without symlinks (fixes "unsafe plugin manifest path" error)
- Rename plugin folder: plugins/automagik-genie -> plugins/genie
- Rename entrypoint: automagik-genie.ts -> genie.ts
- Update plugin id/name to "genie" across Claude Code and OpenClaw manifests
- Update all source references (scripts, sync, build, version, worker-service)
- Remove stale .genie/sampaio/ directory

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "openclaw": {
     "extensions": [
-      "./plugins/automagik-genie/index.ts"
+      "./plugins/genie/index.ts"
     ]
   },
   "publishConfig": {
