fix(ci): update publish workflow paths after plugin rename
The rename from automagik-genie to genie missed the CI workflow path.
Also adds all version-synced files to git add and syncs marketplace.json
version automatically.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add package.json src/lib/version.ts plugins/automagik-genie/
+          git add package.json src/lib/version.ts plugins/genie/ openclaw.plugin.json .claude-plugin/marketplace.json
           git diff --staged --quiet && echo "No version changes to commit" || \
             git commit -m "chore(version): bump to $(node -p 'require(\"./package.json\").version') [skip ci]" && \
             git push origin main
